First pass at personal website content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,77 @@
-hello world
+<html>
+
+<head>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <link rel="stylesheet" href="mystyle.css">
+    <style>
+        body {
+            font-family: 'Montserrat';
+            font-size: 22px;
+        }
+
+        h1 {
+            text-align: center;
+        }
+
+        p {
+            text-align: center;
+        }
+
+        div {
+            text-align: center;
+        }
+
+        a:link {
+            color: rgb(205, 78, 150);
+            background-color: transparent;
+            text-decoration: none;
+        }
+
+        a:visited {
+            color: pink;
+            background-color: transparent;
+            text-decoration: none;
+        }
+
+        a:hover {
+            color: rgb(31, 2, 40);
+            background-color: transparent;
+
+        }
+    </style>
+</head>
+
+<body>
+    <div class="center">
+        <section class="padded-content">
+            <p>
+
+            </p>
+            <p>
+                My name is Sophia Vojta. I currently work as a Software Engineer on the data engineering team at <a
+                    href=https://www.huntclub.com><b>Hunt Club.</b></a>
+            </p>
+            <p></p>
+            I completed a Masters in Computer Science (in 2022) and a Bachelors in Physics (in 2018), both from the
+            University of Chicago. In between, I also spent nearly four years working in
+            higher education administration at UChicago, where I led career services for undergraduate STEM
+            students.
+
+            </p>
+
+            <ul style="list-style: none;">
+                <li>You can e-mail me <a href=mailto:sophiacvojta@gmail.com><b>here</b></a>.</li>
+                <li>You can visit my LinkedIn <a href=https://www.linkedin.com/in/sophiavojta><b>here</b></a>.</li>
+                <li> You can see my technical projects on GitHub <a href=https://github.com/sophiavojta><b>here</b></a>.
+                </li>
+            </ul>
+            <p>
+
+
+
+            </p>
+        </section>
+    </div>
+</body>
+
+</html>
