--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             left: 0;
             height: 100%;
             width: 100%;
+            margin-top: 25px;
         }
 
         .middle {
@@ -68,6 +69,7 @@
             <div class="inner">
                 <div class="center">
                     <section class="padded-content">
+                        <img src="photo.jpg" width="400">
                         <p>
 
                         </p>
@@ -83,6 +85,8 @@
                         students.
 
                         </p>
+                        <p>Outside of work I like learning new things, hiking in beautiful places, climbing rocks and
+                            boulders, and eating vegan food in Chicago.</p>
 
                         <ul style="list-style: none;">
                             <li>You can e-mail me <a href=mailto:sophiacvojta@gmail.com><b>here</b></a>.</li>
