--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 
+
 <head>
+    <title>Sophia Vojta</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link rel="stylesheet" href="mystyle.css">
     <style>
