Update job title

--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
 
                         </p>
                         <p>
-                            My name is Sophia Vojta. I currently work as a Software Engineer on the data engineering
-                            team at <a href=https://www.huntclub.com><b>Hunt Club.</b></a>
+                            My name is Sophia Vojta. I currently work as a Senior Software Engineer focused on data at <a href=https://www.huntclub.com><b>Hunt Club.</b></a>
                         </p>
                         <p></p>
                         I completed a Masters in Computer Science (in 2022) and a Bachelors in Physics (in 2018), both
