Update  Heliogen job title

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
                         </p>
                         <p>
-                            My name is Sophia Vojta. I currently work as a Senior Software Engineer focused on data at <a href=https://www.huntclub.com><b>Hunt Club.</b></a>
+                            My name is Sophia Vojta. I currently work as a Software Engineer at <a href=https://www.heliogen.com><b>Heliogen.</b></a>
                         </p>
                         <p></p>
                         I completed a Masters in Computer Science (in 2022) and a Bachelors in Physics (in 2018), both
@@ -88,7 +88,7 @@
 
                         </p>
                         <p>Outside of work I like learning new things, hiking in beautiful places, climbing rocks and
-                            boulders, and eating vegan food in Chicago.</p>
+                            boulders, and baking vegan pastries.</p>
 
                         <ul style="list-style: none;">
                             <li>You can e-mail me <a href=mailto:sophiacvojta@gmail.com><b>here</b></a>.</li>
