--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
                         </p>
                         <p>
-                            My name is Sophia Vojta. I currently work as a Software Engineer at <a href=https://www.heliogen.com><b>Heliogen.</b></a>
+                            My name is Sophia Vojta. I currently work as a Data Engineer at <a href=https://www.pomelocare.com><b>Pomelo Care.</b></a>
                         </p>
                         <p></p>
                         I completed a Masters in Computer Science (in 2022) and a Bachelors in Physics (in 2018), both
@@ -87,16 +87,12 @@
                         students.
 
                         </p>
-                        <p>Outside of work I like learning new things, hiking in beautiful places, climbing rocks and
-                            boulders, and baking vegan pastries.</p>
+                        <p>Outside of work I like learning new things, hiking in beautiful places, and baking vegan pastries.</p>
 
                         <ul style="list-style: none;">
                             <li>You can e-mail me <a href=mailto:sophiacvojta@gmail.com><b>here</b></a>.</li>
                             <li>You can visit my LinkedIn <a
                                     href=https://www.linkedin.com/in/sophiavojta><b>here</b></a>.</li>
-                            <li> You can see my technical projects on GitHub <a
-                                    href=https://github.com/sophiavojta><b>here</b></a>.
-                            </li>
                         </ul>
                         <p>
 
